--- a/2E1902.html
+++ b/2E1902.html
@@ -90,7 +90,27 @@
         <h3 style="text-align:center;">🚢 2nd Engineer  Job Openings</h3>
         <h4 style="text-align:center;">Update Date:- 19/02/2025</h4>
         
-<!-- NAZ Maritime -->
+<!-- Columbia Aurus Ship Management - Second Engineer -->
+<div class="job-card">
+    <div class="job-title">Columbia Aurus Ship Management</div>
+    <div class="job-details">
+        <strong>Position:</strong> Second Engineer<br>
+        <strong>Vessel Type:</strong> DP Vessel<br>
+        <strong>Location:</strong> Qatar / Angola<br>
+        <strong>Experience:</strong> Required<br>
+    </div>
+    <div class="buttons">
+        <a class="email" href="mailto:jaikishan@columbiaaurus.com?subject=Application%20for%20Second%20Engineer%20position&body=My%20name%20is%20[Your%20Name].%20I%20am%20applying%20for%20the%20Second%20Engineer%20position%20at%20Columbia%20Aurus%20Ship%20Management.">
+            Apply via Email
+        </a>
+        <a href="https://wa.me/919631773223?text=My%20name%20is%20[Your%20Name].%20I%20am%20applying%20for%20the%20Second%20Engineer%20position%20at%20Columbia%20Aurus%20Ship%20Management." target="_blank">
+            Apply via WhatsApp
+        </a>
+    </div>
+</div>
+
+        
+        <!-- NAZ Maritime -->
 <div class="job-card">
     <div class="job-title">NAZ Maritime</div>
     <div class="job-details">
