--- a/Rat1902.html
+++ b/Rat1902.html
@@ -90,7 +90,28 @@
         <h3 style="text-align:center;">🚢 Ratings  Job Openings</h3>
         <h4 style="text-align:center;">Update Date:- 19/02/2025</h4>
         
-<!-- KIWA Shipping LLP -->
+<!-- Columbia Aurus Ship Management - Oiler Position -->
+<div class="job-card">
+    <div class="job-title">Columbia Aurus Ship Management (RPSL-MUM-373)</div>
+    <div class="job-details">
+        <strong>Position:</strong> Oiler (With Watchkeeping Certificate)<br>
+        <strong>Vessel Type:</strong> DSV DP-2<br>
+        <strong>Location:</strong> Mumbai (ONGC Charter)<br>
+        <strong>Experience:</strong> Offshore experience required<br>
+        <strong>Additional Requirement:</strong> PCC (Police Clearance Certificate)<br>
+    </div>
+    <div class="buttons">
+        <a class="email" href="mailto:columbiaaurus.com?subject=Application%20for%20Oiler%20Position&body=My%20name%20is%20[Your%20Name].%20I%20am%20applying%20for%20the%20Oiler%20position%20at%20Columbia%20Aurus%20Ship%20Management.">
+            Apply via Email
+        </a>
+        <a href="https://wa.me/918500635319?text=My%20name%20is%20[Your%20Name].%20I%20am%20applying%20for%20the%20Oiler%20position%20at%20Columbia%20Aurus%20Ship%20Management." target="_blank">
+            Apply via WhatsApp
+        </a>
+    </div>
+</div>
+
+        
+        <!-- KIWA Shipping LLP -->
 <div class="job-card">
     <div class="job-title">KIWA Shipping LLP</div>
     <div class="job-details">
