--- a/Mas1902.html
+++ b/Mas1902.html
@@ -90,6 +90,22 @@
         <h3 style="text-align:center;">🚢 Master  Job Openings</h3>
         <h4 style="text-align:center;">Update Date:- 19/02/2025</h4>
         
+<!-- Columbia Aurus Ship Management - Master Position -->
+<div class="job-card">
+    <div class="job-title">Columbia Aurus Ship Management</div>
+    <div class="job-details">
+        <strong>Position:</strong> Master<br>
+        <strong>Vessel Type:</strong> AHTS FiFi 1 (Non-DP)<br>
+        <strong>Charter:</strong> ADNOC<br>
+        <strong>Port:</strong> UAE<br>
+        <strong>Joining:</strong> ASAP<br>
+    </div>
+    <div class="buttons">
+        <a href="https://wa.me/918104721414?text=My%20name%20is%20[Your%20Name].%20I%20am%20applying%20for%20the%20Master%20position%20at%20Columbia%20Aurus%20Ship%20Management." target="_blank">
+            Apply via WhatsApp
+        </a>
+    </div>
+</div>
 
 
 
