--- a/Rat1902.html
+++ b/Rat1902.html
@@ -100,7 +100,7 @@
         <strong>Internet Access:</strong> Available<br>
     </div>
     <div class="buttons">
-        <a href="mailto:vivek.bawkar@imsship.com?subject=Application%20for%20Fitter%20position" target="_blank">
+        <a class="email" href="mailto:vivek.bawkar@imsship.com?subject=Application%20for%20Fitter%20position" target="_blank">
             Apply via Email
         </a>
         <a href="https://wa.me/919967659701?text=My%20name%20is%20[Your%20Name].%20I%20am%20applying%20for%20the%20Fitter%20position%20at%20IMS%20Ship%20Management." target="_blank">
@@ -119,7 +119,7 @@
         <strong>Internet Access:</strong> Available<br>
     </div>
     <div class="buttons">
-        <a href="mailto:vivek.bawkar@imsship.com?subject=Application%20for%20Pumpman%20position" target="_blank">
+        <a class="email" href="mailto:vivek.bawkar@imsship.com?subject=Application%20for%20Pumpman%20position" target="_blank">
             Apply via Email
         </a>
         <a href="https://wa.me/919967659701?text=My%20name%20is%20[Your%20Name].%20I%20am%20applying%20for%20the%20Pumpman%20position%20at%20IMS%20Ship%20Management." target="_blank">
