--- a/CE1902.html
+++ b/CE1902.html
@@ -90,8 +90,30 @@
         <h3 style="text-align:center;">🚢 Chief Engineer  Job Openings</h3>
         <h4 style="text-align:center;">Update Date:- 19/02/2025</h4>
         
+<!-- Chief Engineer Position - Ryan Ship Management Pvt. Ltd. -->
+<div class="job-card">
+    <div class="job-title">Ryan Ship Management Pvt. Ltd. (RPSL-MUM-126)</div>
+    <div class="job-details">
+        <strong>Position:</strong> Chief Engineer<br>
+        <strong>Vessel Type:</strong> DP2 AHTS / PSV<br>
+        <strong>Location:</strong> Saudi Arabia (ARAMCO)<br>
+        <strong>Contract Duration:</strong> 120 days<br>
+        <strong>Travel Date:</strong> 25/02/2025<br>
+        <strong>Experience:</strong> 730 days as Chief Engineer on DP2 AHTS / PSV vessel<br>
+    </div>
+    <div class="buttons">
+        <a href="mailto:applications@ryanship.com?subject=Application%20for%20Chief%20Engineer%20position" target="_blank">
+            Apply via Email
+        </a>
+        <a href="https://wa.me/918879641807?text=My%20name%20is%20[Your%20Name].%20I%20am%20applying%20for%20the%20Chief%20Engineer%20position%20at%20Ryan%20Ship%20Management." target="_blank">
+            Apply via WhatsApp
+        </a>
+    </div>
+</div>
 
-<!-- Columbia Aurus Ship Management - Chief Engineer Position -->
+
+        
+        <!-- Columbia Aurus Ship Management - Chief Engineer Position -->
 <div class="job-card">
     <div class="job-title">Columbia Aurus Ship Management</div>
     <div class="job-details">
