--- a/CE1902.html
+++ b/CE1902.html
@@ -102,7 +102,7 @@
         <strong>Experience:</strong> 730 days as Chief Engineer on DP2 AHTS / PSV vessel<br>
     </div>
     <div class="buttons">
-        <a href="mailto:applications@ryanship.com?subject=Application%20for%20Chief%20Engineer%20position" target="_blank">
+        <a class="email" href="mailto:applications@ryanship.com?subject=Application%20for%20Chief%20Engineer%20position" target="_blank">
             Apply via Email
         </a>
         <a href="https://wa.me/918879641807?text=My%20name%20is%20[Your%20Name].%20I%20am%20applying%20for%20the%20Chief%20Engineer%20position%20at%20Ryan%20Ship%20Management." target="_blank">
